--- a/index.ipynb
+++ b/index.ipynb
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = 5"
+    "number_of_weeks = 3"
    ]
   },
   {
@@ -148,6 +148,7 @@
     }
    ],
    "source": [
+    "number\n",
     "number_of_weeks # 5"
    ]
   },
